# cache

./: README.md
belady/: CMakeLists.txt  main.cpp
belady/inc/: belady_cache.hpp
lfu/: CMakeLists.txt  data1  main.cpp
lfu/inc/: lfu_cache.hpp
lfu/src/: lfu_cache.cpp
tests/EndToEnd/: e2e_tests.out  testgen.py  testrun.py
tests/EndToEnd/input_files/: test_01.in  test_02.in  test_03.in  test_04.in  test_05.in  test_06.in  test_07.in  test_08.in  test_09.in  test_10.in
tests/unit/: CMakeLists.txt  test.cpp
